--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "bip32": "^2.0.4",
     "bip39": "^3.0.2",
-    "bitcoinjs-lib": "^4.0.5",
+    "bitcoinjs-lib": "5.2.0",
     "commander": "^4.0.1"
   }
 }
